# cc-sakura

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/char/: sakura.json
assets/map/: level0.map
assets/spr/: sakura.sprite  tile.sprite
include/: app.h
include/chars/: sakura.h  sprites.h
include/engine/: collision.h  engine.h  events.h  map.h  physics.h  renderer.h  scene.h  signal.h  sprite.h  text.h
include/game/: game_scenes.h
include/misc/: hashmap.h  list.h  mathex.h  stack.h  vector.h
include/render/: char_renderer.h  collider_renderer.h  font_renderer.h  renderer.h
include/spr/: sakura.h  sprites.h  tiles.h
raw/map/: level0.txt
raw/spr/: tile.json
scripts/: build-macos.sh  build-ubuntu.sh  build-windows.ps1
src/: app.c  main.c
src/chars/: sakura.c  sprites.c
src/engine/: collision.c  engine.c  events.c  map.c  physics.c  renderer.c  scene.c  sprite.c  text.c
src/game/scenes/: scene_empty.c  scene_fps.c  scene_setup.c
src/misc/: hashmap.c  list.c  mathex.c  stack.c  vector.c
src/render/: char_renderer.c  collider_renderer.c  font_renderer.c  renderer.c
src/spr/: sakura.c  sprites.c
tools/: map_to_bin.py  sprite_to_bin.py
